--- a/final-project/descriptive_statistics.ipynb
+++ b/final-project/descriptive_statistics.ipynb
@@ -883,7 +883,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "\n",
+    "\n",
+    "f, ax = plt.subplots(figsize=(6.5, 6.5))\n",
+    "sns.despine(f, left=True, bottom=True)\n",
+    "clarity_ranking = [\"I1\", \"SI2\", \"SI1\", \"VS2\", \"VS1\", \"VVS2\", \"VVS1\", \"IF\"]\n",
+    "sns.scatterplot(x=\"carat\", y=\"price\",\n",
+    "                hue=\"clarity\", size=\"depth\",\n",
+    "                palette=\"ch:r=-.2,d=.3_r\",\n",
+    "                hue_order=clarity_ranking,\n",
+    "                sizes=(1, 8), linewidth=0,\n",
+    "                data=diamonds, ax=ax)"
+   ]
   },
   {
    "cell_type": "code",
@@ -912,6 +927,261 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DataSet with Sentiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 22)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iyear</th>\n",
+       "      <th>imonth</th>\n",
+       "      <th>iday</th>\n",
+       "      <th>more_than_24h</th>\n",
+       "      <th>country_txt</th>\n",
+       "      <th>city</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>news</th>\n",
+       "      <th>suicide</th>\n",
+       "      <th>...</th>\n",
+       "      <th>targtype</th>\n",
+       "      <th>targtype_txt</th>\n",
+       "      <th>band_name</th>\n",
+       "      <th>npeople_attacking</th>\n",
+       "      <th>weapon</th>\n",
+       "      <th>weapon_txt</th>\n",
+       "      <th>nkill</th>\n",
+       "      <th>news_processed</th>\n",
+       "      <th>positive_sentiment</th>\n",
+       "      <th>negative_sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>18.386932</td>\n",
+       "      <td>-66.061127</td>\n",
+       "      <td>3/5/1970: Unknown Puerto Rican Nationalists as...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Military</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Firearms</td>\n",
+       "      <td>2</td>\n",
+       "      <td>['unknown', 'puerto', 'rican', 'nationalist', ...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Bel Air</td>\n",
+       "      <td>39.538940</td>\n",
+       "      <td>-76.348479</td>\n",
+       "      <td>3/9/1970: A bomb exploded in the car of Ralph ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Explosives</td>\n",
+       "      <td>2</td>\n",
+       "      <td>['bomb', 'explod', 'car', 'ralph', 'feathersto...</td>\n",
+       "      <td>0.031</td>\n",
+       "      <td>0.306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>3</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Detroit</td>\n",
+       "      <td>42.331685</td>\n",
+       "      <td>-83.047924</td>\n",
+       "      <td>3/20/1970: Unknown perpetrators shot and kille...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Private Citizens &amp; Property</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Firearms</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['unknown', 'perpetr', 'shot', 'kill', 'burton...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Baltimore</td>\n",
+       "      <td>39.308342</td>\n",
+       "      <td>-76.616104</td>\n",
+       "      <td>4/24/1970: Three members of the Black Panthers...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Police</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Firearms</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['three', 'member', 'black', 'panther', 'parti...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1970</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Sacramento</td>\n",
+       "      <td>38.551295</td>\n",
+       "      <td>-121.471066</td>\n",
+       "      <td>5/9/1970: Sacramento Police Officer Bernard Be...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Police</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>40</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Firearms</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['sacramento', 'polic', 'offic', 'bernard', 'b...</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.316</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   iyear  imonth  iday  more_than_24h    country_txt        city   latitude  \\\n",
+       "0   1970       3     5              0  United States    San Juan  18.386932   \n",
+       "1   1970       3     9              0  United States     Bel Air  39.538940   \n",
+       "2   1970       3    20              0  United States     Detroit  42.331685   \n",
+       "3   1970       4    24              0  United States   Baltimore  39.308342   \n",
+       "4   1970       5     9              0  United States  Sacramento  38.551295   \n",
+       "\n",
+       "    longitude                                               news  suicide  \\\n",
+       "0  -66.061127  3/5/1970: Unknown Puerto Rican Nationalists as...        0   \n",
+       "1  -76.348479  3/9/1970: A bomb exploded in the car of Ralph ...        0   \n",
+       "2  -83.047924  3/20/1970: Unknown perpetrators shot and kille...        0   \n",
+       "3  -76.616104  4/24/1970: Three members of the Black Panthers...        0   \n",
+       "4 -121.471066  5/9/1970: Sacramento Police Officer Bernard Be...        0   \n",
+       "\n",
+       "         ...          targtype                 targtype_txt  band_name  \\\n",
+       "0        ...                 4                     Military      Other   \n",
+       "1        ...                20                      Unknown      Other   \n",
+       "2        ...                14  Private Citizens & Property      Other   \n",
+       "3        ...                 3                       Police      Other   \n",
+       "4        ...                 3                       Police      Other   \n",
+       "\n",
+       "  npeople_attacking weapon  weapon_txt  nkill  \\\n",
+       "0                 1      5    Firearms      2   \n",
+       "1                 2      6  Explosives      2   \n",
+       "2                 7      5    Firearms      1   \n",
+       "3                 3      5    Firearms      1   \n",
+       "4                40      5    Firearms      1   \n",
+       "\n",
+       "                                      news_processed  positive_sentiment  \\\n",
+       "0  ['unknown', 'puerto', 'rican', 'nationalist', ...               0.000   \n",
+       "1  ['bomb', 'explod', 'car', 'ralph', 'feathersto...               0.031   \n",
+       "2  ['unknown', 'perpetr', 'shot', 'kill', 'burton...               0.000   \n",
+       "3  ['three', 'member', 'black', 'panther', 'parti...               0.000   \n",
+       "4  ['sacramento', 'polic', 'offic', 'bernard', 'b...               0.000   \n",
+       "\n",
+       "  negative_sentiment  \n",
+       "0              0.227  \n",
+       "1              0.306  \n",
+       "2              0.288  \n",
+       "3              0.324  \n",
+       "4              0.316  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gt = pd.read_csv('CSVs/globalterrorism10000.csv')\n",
+    "display(gt.shape)\n",
+    "gt.head()"
+   ]
   },
   {
    "cell_type": "code",
