--- a/final-project/descriptive_statistics.ipynb
+++ b/final-project/descriptive_statistics.ipynb
@@ -840,6 +840,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, axs = plt.subplots(figsize=(15,15))\n",
+    "\n",
+    "plt.subplot(1, 2, 1)\n",
+    "axs = gta['npeople_attacking'].groupby(gta['weapon_txt']).median().sort_values().plot(kind = 'barh', alpha = 0.9)\n",
+    "plt.title('Weapons by Number of people attacking')\n",
+    "plt.ylabel('Weapon')\n",
+    "plt.xlabel('Number of people (median)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.subplot(1, 2, 2)\n",
+    "axs = gtb['npeople_attacking'].groupby(gtb['attacktype_txt']).median().sort_values().plot(kind = 'barh', alpha = 0.9)\n",
+    "plt.title('Attack Type by Number of people attacking')\n",
+    "plt.ylabel('Attack Type')\n",
+    "plt.xlabel('Number of people (median)')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [],
