--- a/final-project/data_cleaning.ipynb
+++ b/final-project/data_cleaning.ipynb
@@ -892,13 +892,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Band Name\n",
     "top30_band = list(gt['band_name'].value_counts().head(30).index)\n",
     "gt['band_name'].loc[~gt['band_name'].isin(top30_band)] = 'Other' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Unknown',\n",
+       " 'Taliban',\n",
+       " 'Islamic State of Iraq and the Levant (ISIL)',\n",
+       " 'Boko Haram',\n",
+       " 'Al-Shabaab',\n",
+       " 'Tehrik-i-Taliban Pakistan (TTP)',\n",
+       " 'Communist Party of India - Maoist (CPI-Maoist)',\n",
+       " 'Al-Qaida in the Arabian Peninsula (AQAP)',\n",
+       " \"New People's Army (NPA)\",\n",
+       " 'Al-Qaida in Iraq',\n",
+       " 'Maoists',\n",
+       " \"Kurdistan Workers' Party (PKK)\",\n",
+       " 'Liberation Tigers of Tamil Eelam (LTTE)',\n",
+       " 'Revolutionary Armed Forces of Colombia (FARC)',\n",
+       " 'Fulani extremists',\n",
+       " 'Houthi extremists (Ansar Allah)',\n",
+       " 'Muslim extremists',\n",
+       " 'Algerian Islamic Extremists',\n",
+       " 'Palestinian Extremists',\n",
+       " 'Al-Nusrah Front',\n",
+       " 'Sinai Province of the Islamic State',\n",
+       " 'Gunmen',\n",
+       " \"Donetsk People's Republic\",\n",
+       " 'Al-Qaida in the Islamic Maghreb (AQIM)',\n",
+       " 'Separatists',\n",
+       " 'Khorasan Chapter of the Islamic State',\n",
+       " 'Tripoli Province of the Islamic State',\n",
+       " 'Salafist Group for Preaching and Fighting (GSPC)',\n",
+       " 'Abu Sayyaf Group (ASG)',\n",
+       " 'Hamas (Islamic Resistance Movement)']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top30_band"
    ]
   },
   {
